# raccoin

./: Cargo.toml  README.md
blockchain/: Cargo.toml  settings.json
blockchain/src/: block.rs  blockchain.rs  hash.rs  main.rs  peers_network.rs  rest_api.rs  settings.rs  state.rs
blockchain/src/rpc/: mod.rs  server.rs
explorer/: index.html  script.js  style.css
test-service/: Cargo.toml
test-service/src/: client.rs  lib.rs  server.rs
