[package]
name = "blockchain"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
sha2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2.1"
tokio = { version = "0.2", features = ["full"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
warp = "0.2"
log = "0.4"
env_logger = "0.7"
tarpc = { version = "0.20", features = ["full"] }
futures = "0.3"
config = { version = "0.9", features = ["json"] }
hashbrown = "0.7"
